1999-06-26  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmCommand/FvwmCommandS.c:
	* FvwmCommand/FvwmCommand.c: Use hostname in pipe name. Patch by Neil
	Bird.

1999-06-26  Chris Rankin  <rankinc@zipworld.com.au>

    * FvwmForm/FvwmForm.c: new signal handling
    * FvwmGtk/FvwmGtk.c: removed unused headers "signal.h" and "sys/select.h"

1999-06-26  Chris Rankin  <rankinc@zipworld.com.au>

    * FvwmWinList/ButtonArray.c: Set array->head correctly when
      deleting first button in array.

1999-06-25  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* FvwmGtk/FvwmGtk.c (main): exit properly when called with the
	wrong number of arguments.

1999-06-25  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmIdent/FvwmIdent.c (list_end): fixed several bugs:
	- can't call GetConfigLine because it waits forever if no line arrives
	- don't free tline, it isn' malloced
	- call XFlush to make sure the text is visible in an expose

	* FvwmWinList/FvwmWinList.c (MakeMeWindow): don't set buggy resize
	increment hints (0).

	* FvwmPager/x_pager.c (IconMoveWindow): fixed printing at random
	location

1999-06-24  Hippo

	* FvwmAnimate/FvwmAnimate.c: Removed the Gcontext sharing stuff
	* FvwmButtons/*:		ditto
	* FvwmIdent/*:			ditto
	* FvwmScroll/*:			ditto
	* FvwmCpp/*:			ditto
	* FvwmM4/*:			ditto
	* FvwmBanner/FvwmBanner.c: FvwmBanner now shares fvwm's visual type
	* FvwmForm/FvwmForm.c:		ditto
	* FvwmIconMan/FvwmForm.c:	ditto

1999-06-24  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (MoveWindow): fixed windows being moved into the
	void on desk to desk transfers

1999-06-23  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmPager/x_pager.c (IconMoveWindow):
	(MoveWindow): move window to cursor position before moving it out of
	the pager

	* FvwmTaskBar/ButtonArray.c (RemoveButton): Grr, why was this function
	broken again?

	* FvwmEvent/FvwmEvent.c (event_table): removed excess events from
	list (I thought I'd put this in the 2.2 branch).
